---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: ????
  Info:
    - Setup the entity, item, sounds & test them
    - Create the -active variant whilst you're hovering it
    - Fail to make two combinators not fight over render layers
    - Luarender the active sprite
    - Disable the combinator screen
    - Attempt to cut out the window
    - Do not even render the empty screen
    - Hide screen of active variant from sidebar
    - When opening the active variant, open the gui of the normal one
    - Make active sidebar less weird by showing the sprite, no shadow tho
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2024. 11. 04
  Info:
    - Initial commit