@@ -3,6 +3,35 @@
 --   ["alchemical-combinator-active"] = true,
 -- }
 
+local Handler = {}
+
+script.on_init(function()
+  storage.structs = {}
+  storage.entity_that_owns = {}
+end)
+
+function Handler.on_created_entity(event)
+  local entity = event.entity or event.destination
+
+  storage.structs[entity.unit_number] = {
+    entity = entity,
+    entity_active = nil,
+  }
+end
+
+for _, event in ipairs({
+  defines.events.on_built_entity,
+  defines.events.on_robot_built_entity,
+  defines.events.on_space_platform_built_entity,
+  defines.events.script_raised_built,
+  defines.events.script_raised_revive,
+  defines.events.on_entity_cloned,
+}) do
+  script.on_event(event, Handler.on_created_entity, {
+    {filter = "name", name = "alchemical-combinator"},
+  })
+end
+
 local direction_to_sprite = {
   [defines.direction.north] = "alchemical-combinator-active-north",
   [defines.direction.east ] = "alchemical-combinator-active-east" ,
@@ -16,14 +45,17 @@ script.on_event(defines.events.on_selected_entity_changed, function(event)
   local selected = player.selected
 
   if selected and selected.name == "alchemical-combinator" then
+    local struct = storage.structs[selected.unit_number]
+    assert(struct)
+
     local active = selected.surface.create_entity{
       name = "alchemical-combinator-active",
       force = selected.force,
-      -- position = {x = selected.position.x, y = selected.position.y + 0.01},
       position = selected.position,
       direction = selected.direction,
       create_build_effect_smoke = false,
     }
+    assert(active)
 
     rendering.draw_sprite{
       sprite = direction_to_sprite[selected.direction],
@@ -32,10 +64,17 @@ script.on_event(defines.events.on_selected_entity_changed, function(event)
       -- time_to_live = 60,
       render_layer = "higher-object-under",
     }
+
+    struct.entity_active = active
+    storage.entity_that_owns[active.unit_number] = selected
     return
   end
 
   if selected and selected.name == "alchemical-combinator-active" then
+    local unit_number = storage.entity_that_owns[selected.unit_number].unit_number
+    local struct = storage.structs[unit_number]
+    assert(struct)
+
     player.play_sound{
       path = "alchemical-combinator-charge",
       position = selected.position,
@@ -43,11 +82,17 @@ script.on_event(defines.events.on_selected_entity_changed, function(event)
   end
 
   if event.last_entity and event.last_entity.name == "alchemical-combinator-active" then
+    local unit_number = storage.entity_that_owns[event.last_entity.unit_number].unit_number
+    local struct = storage.structs[unit_number]
+    assert(struct)
+
     player.play_sound{
       path = "alchemical-combinator-uncharge",
       position = event.last_entity.position,
     }
+
     event.last_entity.destroy()
+    struct.entity_active = nil
   end
 end)
 
@@ -56,6 +101,6 @@ script.on_event(defines.events.on_gui_opened, function(event)
   local entity = event.entity
 
   if entity and entity.name == "alchemical-combinator-active" then
-    player.opened = entity.surface.find_entity("alchemical-combinator", entity.position)
+    player.opened = assert(storage.entity_that_owns[entity.unit_number])
   end
 end)
